<resources>
    <string name="app_name">iSCAN </string>

    <string name="Do_you_still_go_to_ATM">使用iSCAN积分, 从iSCAN授权的商家购买或租赁商品</string>
    <string name="I_have_an_account">已有账号,马上登录</string>
    <string name="I_am_a_new_user">没有账号,立即注册</string>
    <string name="Connect">登录</string>
    <string name="Sign_up">注册</string>
    <string name="Email">邮箱</string>
    <string name="Password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="Mobile">手机号码</string>
    <string name="First_name">名</string>
    <string name="Last_name">姓</string>
    <string name="Agreed">我已阅读并同意相关服务条款</string>
    <string name="Sign_up_now">立即注册</string>
    <string name="InputEmail">请输入邮箱地址</string>
    <string name="InputValidEmail">请输入正确的邮箱地址</string>
    <string name="InputPWD">请输入密码</string>
    <string name="PWDForm">请输入6-20位长度的密码</string>
    <string name="InputPhone">请输入您的电话号码</string>
    <string name="InputFirstName">请输入您的名字</string>
    <string name="InputLastName">请输入您的姓氏</string>
    <string name="ReadAndAcceptTerms">我已阅读并同意相关服务条款</string>
    <string name="InvalidEmail">注意:非法邮箱地址</string>
    <string name="EmailExists">邮箱地址已使用</string>
    <string name="Balance">账户余额</string>
    <string name="Transactions">账单明细</string>
    <string name="ErCode">二维码</string>
    <string name="Scan">扫描</string>
    <string name="Transfer">转账</string>
    <string name="Cancel">取消</string>
    <string name="Transfer_to">转账给</string>
    <string name="Input_amount">请输入积分数额</string>
    <string name="Confirm">确认</string>
    <string name="Balance_insufficient">余额不足</string>
    <string name="Succeeded">成功</string>
    <string name="You_transfered">你刚刚转出:</string>
    <string name="CheckMailbox">请查看您的邮箱</string>


    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>
    <string name="actionbar_title_qr_scan">二维码/条码</string>
    <string name="str_request_camera_message">请求获取相机权限</string>
    <string name="str_request_sd_message">请求获取手机存储权限</string>
    <string name="permissions_camera_error">相机无法完成初始化,请正确授权。</string>
    <string name="permissions_external_error">图片存储失败,请正确授权。</string>
    <string name="scan_no_content">未扫描到內容</string>
    <string name="loading">加载中，请稍候……</string>
    <string name="reg_ing">注册中，请稍候……</string>
    <string name="reg_success">注册成功</string>
    <string name="not_transfer_to_self">不能自己给自己转账</string>
    <string name="facebook_login">脸谱账号登录</string>
    <string name="google_login">谷歌账号登录</string>
    <string name="or">或</string>
    <string name="login_succeeded">登录成功</string>
    <string name="share_qrcode">分享二维码到</string>
    <string name="query_error">查询错误</string>
    <string name="scan_qrcode">扫描二维码</string>
    <string name="my_qrcode">我的二维码</string>
</resources>
