<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.michel.pointscredit.view.widget.PCCommonTitleLayout
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:layout_alignParentTop="true"
        app:title_content="@string/Connect" />


    <com.michel.pointscredit.view.widget.PCEditText
        android:id="@+id/et_login_pwd"
        android:layout_width="263dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textColor="@color/color_6492FF"
        android:textSize="13sp"
        app:et_hint="@string/Password"
        app:et_icon_src="@drawable/iclock"
        android:layout_below="@+id/et_login_email"
        android:layout_centerHorizontal="true"
         />

    <com.michel.pointscredit.view.widget.PCEditText
        android:id="@+id/et_login_email"
        android:layout_width="261dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/color_6492FF"
        android:textSize="13sp"
        app:et_hint="@string/Email"
        app:et_icon_src="@drawable/ic_user"
        android:layout_below="@+id/login_icon"
        android:layout_centerHorizontal="true"
         />

    <Button
        android:id="@+id/btn_login_reg"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/round_rectangle_blue_stroke"
        android:text="@string/Sign_up"
        android:textColor="@color/color_6492FF"
        android:textSize="13sp"
        android:visibility="invisible"
        android:layout_below="@+id/et_login_pwd" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="47dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/round_rectangle_blue"
        android:text="@string/Connect"
        android:textColor="@color/color_D1DCFD"
        android:textSize="13sp"
        android:layout_below="@+id/et_login_pwd"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/tv_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/color_6492FF"
        android:textSize="13sp"
        android:layout_below="@+id/btn_login"
        android:layout_centerInParent="true"/>

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="160dp"
        android:layout_height="116dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/pc_logo" />
</RelativeLayout>