<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.michel.pointscredit.view.widget.PCCommonTitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="19dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_user_icon"
        app:layout_constraintVertical_bias="0.147"
        app:srcCompat="@drawable/login_ic_mail" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="19dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/login_ic_lock" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="19dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/ic_phone" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="19dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.168"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="19dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/ic_user"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/cb_reg_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/ReadAndAcceptTerms"
        android:textColor="@color/color_6492FF"
        android:textSize="13sp"
        app:buttonTint="@color/color_6492FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reg" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/round_rectangle_blue_stroke"
        android:text="@string/Sign_up_now"
        android:textColor="@color/color_527FFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_lastname" />

    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="272dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/color_999999"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_user_icon"
        app:layout_constraintVertical_bias="0.134" />

    <EditText
        android:id="@+id/et_reg_phone"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/InputPhone"
        android:inputType="phone"
        android:textColor="@color/color_999999"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_pwd"
        app:layout_constraintVertical_bias="0.025"
        tools:layout_editor_absoluteY="322dp" />

    <EditText
        android:id="@+id/et_reg_pwd"
        android:layout_width="274dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/color_999999"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_email"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/et_reg_firstname"
        android:layout_width="277dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/First_name"
        android:inputType="textPersonName"
        android:textColor="@color/color_666666"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_phone"
        app:layout_constraintVertical_bias="0.029"
        tools:layout_editor_absoluteY="386dp" />

    <EditText
        android:id="@+id/et_reg_lastname"
        android:layout_width="278dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Last_name"
        android:inputType="textPersonName"
        android:textColor="@color/color_666666"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_firstname"
        app:layout_constraintVertical_bias="0.008"
        tools:layout_editor_absoluteX="43dp" />

    <ImageView
        android:id="@+id/reg_user_icon"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:srcCompat="@drawable/bg_user"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.132"
        app:layout_constraintStart_toEndOf="@+id/et_reg_firstname"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />
</android.support.constraint.ConstraintLayout>